# COM2020---Single-Scan-Traceability-Quest

./: .gitignore  LICENSE  README.md  Test.py  Test_add_product.py  Test_main.py  Test_models.py  add_product.py  auth_decorators.py  build.bat  build.sh  config.py  conftest.py  create_admins.py  import_off_products.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  pytest.sh  requirements.txt  run.bat  run.sh
.devcontainer/: devcontainer.json
instance/: trace_quest.db
src/instance/: Electronics_with_codes.jsonl  SimplifiedOFFData.jsonl  luxury_clothing_with_codes.jsonl  trace_quest.db
src/instance/backup/: 20260321-095508.jsonl
src/sstq/: __init__.py  add_product.py  config.py  create_admins.py  import_off_products.py  init.py  main.py  models.py
src/sstq/routes/: admin.py  auth.py  helper.py  home.py  misson.py  product.py  profile.py  scan.py  scan_barcode.py  scan_picture.py  search_product.py  timeline.py  trace_missions.py  tracequest.py
src/sstq/scripts/: convert_off_jsonl_to_json.py  create_admins.py  (+8 more)
static/css/: add.css  base.css  login.css  product.css  scan.css  style.css  tracequest.css
static/js/: add.js  product.js  scan.js  script.js  tracequest.js
templates/: add.html  admin.html  base.html  contacts.html  error.html  home.html  index.html  login.html  product.html  product_detail.html  saved.html  scan.html  timeline.html  tracequest.html
tests/sstq/: conftest.py  test_add_product.py  test_admin.py  test_delete_product.py  test_error_handling.py  test_integration.py  test_main.py  test_models.py  test_tracequest.py
(+49 files in other folders)
