[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sstq"
version = "0.1.0"
description = "COM2020---Single-Scan-Traceability-Quest"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "flask>=3.1.2",
  "flask_sqlalchemy>=3.1.1",
  "flask-login>=0.6.3",
  "flask_cors>=6.0.2",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.2",
]
